--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="title">HTML & CSS foundations</h1>
         <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
         <div class="flex">
-            <img class="avt" src="/image-avatar.webp" alt="">
+            <img class="avt" src="./image-avatar.webp" alt="">
             <p class="author">Greg Hooper</p>
         </div>
         <!-- </div> -->
